--- a/src/main/resources/org/example/kartojimas/creature-form.fxml
+++ b/src/main/resources/org/example/kartojimas/creature-form.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.kartojimas.CreatureForm"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="438.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.kartojimas.CreatureForm">
+   <children>
+      <TextField fx:id="titleField" layoutX="54.0" layoutY="52.0" prefHeight="25.0" prefWidth="200.0" promptText="Title:" />
+      <ComboBox fx:id="typeField" layoutX="54.0" layoutY="99.0" prefHeight="25.0" prefWidth="200.0" promptText="Type:" />
+      <TextArea fx:id="elixirField" layoutX="54.0" layoutY="148.0" prefHeight="85.0" prefWidth="200.0" promptText="Elixirs:" />
+      <DatePicker fx:id="dateField" layoutX="47.0" layoutY="250.0" prefHeight="25.0" prefWidth="207.0" promptText="Date found" />
+      <TextField fx:id="wizardField" layoutX="47.0" layoutY="296.0" prefHeight="25.0" prefWidth="207.0" promptText="Wizard:" />
+      <CheckBox fx:id="isInDanger" layoutX="47.0" layoutY="342.0" mnemonicParsing="false" text="Is in Danger" />
+      <Button layoutX="125.0" layoutY="378.0" mnemonicParsing="false" onAction="#createMagic" text="Create" />
+   </children>
 </AnchorPane>
