--- a/src/main/resources/org/example/kartojimas/creature-form.fxml
+++ b/src/main/resources/org/example/kartojimas/creature-form.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="438.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.kartojimas.CreatureForm">
    <children>
       <TextField fx:id="titleField" layoutX="54.0" layoutY="52.0" prefHeight="25.0" prefWidth="200.0" promptText="Title:" />
@@ -17,6 +16,6 @@
       <DatePicker fx:id="dateField" layoutX="47.0" layoutY="250.0" prefHeight="25.0" prefWidth="207.0" promptText="Date found" />
       <TextField fx:id="wizardField" layoutX="47.0" layoutY="296.0" prefHeight="25.0" prefWidth="207.0" promptText="Wizard:" />
       <CheckBox fx:id="isInDanger" layoutX="47.0" layoutY="342.0" mnemonicParsing="false" text="Is in Danger" />
-      <Button layoutX="125.0" layoutY="378.0" mnemonicParsing="false" onAction="#createMagic" text="Create" />
+      <Button fx:id="createButton" layoutX="125.0" layoutY="378.0" mnemonicParsing="false" onAction="#createMagic" text="Create" />
    </children>
 </AnchorPane>
